@@ -47,6 +47,7 @@ Lua API changes:
 * Add FlyCheat option to gameflow script for disabling dozy mode.
 * Add SetNumberOfSecrets option to gameflow script to set overall amount of secrets.
 * Add SetPoison, GetPoison and RemovePoison to LaraObject Class.
+* Add SetAir and GetAir to LaraObject Class.
 * SetOnFire and GetOnFire have been added to LaraObject.
 * Raised the maximum value on Moveable.SetHP to 32767 (its internal numeric maximum).
 
